MP-110 :recycle: Refactor: 경고 발생 부분 수정 및 문법 다듬기